{{$NEXT}}

0.001001  2021-06-12 18:23:27 CEST
   - avoid tripping PAUSE on a text with a package inside   

0.001  2021-06-12 17:59:55 CEST
   - initial packaging