@@ -6,6 +6,9 @@ copyright_holder = Flavio Poletti (flavio@polettix.it)
 [@Milla]
 ReadmeAnyFromPod.source_filename = script/epan
 
+[MetaNoIndex]
+package = CPAN::Modulelist
+
 [MetaProvides::Package]
 [GithubMeta]
 
